# EnterpriseSync-1

./: .dockerignore  .env.easypanel  .gitignore  .replit  ADMIN_ID_DINAMICO_IMPLEMENTADO.md  ANALISE_COMPLETA_SISTEMA_RDO_MELHORIAS.md  APRESENTACAO_COMERCIAL_SIGE.md  APRESENTACAO_SIGE_CHEFE.md  ARQUIVOS_PARA_LLM_ANALISE.md  ATUALIZACAO_CARD_FUNCIONARIO.md  AUDIT.md  AUDITORIA_ALMOXARIFADO_v9.md  BOTAO_CATEGORIAS_IMPLEMENTADO.md  BOTAO_CATEGORIA_IMPLEMENTADO.md  CALCULOS_JOAO_EXEMPLO_PRATICO.md  CARDS_RDO_IMPLEMENTADOS_SUCESSO.md  COMO_CAPTURAR_LOGS_ERRO_PRODUCAO.md  COMO_FUNCIONAM_OS_CALCULOS.md  CONCLUSAO_ANALISE_RDO_MELHORIAS_IMPLEMENTADAS.md  CONCLUSAO_AUDITORIA_SIGE_RESILIENCIA.md  CONCLUSAO_DEFINITIVA_SIGE_v8.md  CONCLUSAO_FINAL_ADMIN_ID.md  CONCLUSAO_HOTFIX_PRODUCAO_FINALIZADO.md  CONCLUSAO_MODULO_SERVICOS_FINALIZADO.md  CONCLUSAO_SIGE_v8_FINALIZADO.md  CONEXAO_POSTGRESQL_EASYPANEL.md  CONSOLIDACAO_FUNCIONARIOS_BACKEND_FINALIZADA.md  CONSOLIDACAO_FUNCIONARIOS_BACKEND_INICIADA.md  CONSOLIDACAO_PROPOSTAS_BACKEND_FINALIZADA.md  CONSOLIDACAO_PROPOSTAS_BACKEND_INICIADA.md  CONSOLIDACAO_PROPOSTAS_TESTE_FINAL.md  CONSOLIDACAO_RDO_BACKEND_FINALIZADA.md  CONTEXT.md  CORRECAO_405_METHOD_NOT_ALLOWED.md  CORRECAO_ADMIN_ID_DINAMICO_COMPLETA.md  CORRECAO_ADMIN_ID_PRODUCAO_FINAL.md  CORRECAO_BOTAO_HEADER_FUNCIONARIO.md  CORRECAO_CODIGO_OBRA_FINALIZADA.md  CORRECAO_CONFLITO_IDEMPOTENCIA_CONCLUIDA.md  CORRECAO_CUSTO_DANILO.md  (+947 more)
.agents/: agent_assets_metadata.toml
.claude/: settings.local.json
attached_assets/: 00_mapeamento_modulos_1771844001176.md  01_prompt_configuracao_inicial_1771844001174.md  02_prompt_manual_dashboard_1771843891946.md  03_prompt_manual_funcionarios_1771844001174.md  04_prompt_manual_obras_1771844001174.md  05_prompt_manual_veiculos_1771843891947.md  06_prompt_manual_rdo_1771843891947.md  07_prompt_manual_financeiro_1771844001175.md  08_prompt_manual_consolidado_1771843891943.md  1._FLUXO_DE_CAIXA_Veks_Engenharia_1779365341297.xlsx  1_funcionarios_(1)_1776097721397.xlsx  3._Controle_dos_Leads_2026-_SJC_(1)_1778261044956.xlsx  3._Controle_dos_Leads_2026-_SJC_1777548971396.xlsx  6_-_fluxo_de_caixa_,_pagamentos_,_03.26_1775823815192.xlsx  CONTROLE_DE_DIÁRIAS_2026_1775823874397.xlsx  Dockerfile_Novo_v10_1757341367765.0  Pasted--1-Diagn-stico-da-diverg-ncia-atual-O-sistema-tem-dois-_1779801092192.txt  Pasted--129-Cat-logo-criar-servi-o-formato-R-pt-BR-What-Why-Do_1776693986711.txt  Pasted--25-Limpar-rotas-duplicadas-em-views-rdo-py-What-Why-Ac_1778075804855.txt  Pasted--26-Resolver-fluxo-conflitante-Contas-a-Pagar-V2-What-W_1778075816644.txt  Pasted--28-Refatorar-almoxarifado-views-py-em-sub-blueprints-W_1778075860040.txt  Pasted--31-E2E-or-amento-proposta-com-modelo-cobertura-no-demo_1778191123961.txt  Pasted--34-Vincular-or-amento-ao-cronograma-preview-navega-o-O_1778190698959.txt  Pasted--4-Migrar-todos-os-dropdowns-hardcode-para-a-Central-de_1779303577401.txt  Pasted--49-Corrigir-Custo-do-Or-amento-T-cnico-vs-Compra-What-_1779219075458.txt  Pasted--500-Erro-inesperado-no-sistema-Ocorreu-um-erro-interno-no-servidor-Nossa-equipe-foi-notificada--1755260696426_1755260696426.txt  Pasted--60-M-tricas-de-produtividade-empresa-funcion-rio-ranki_1777947115289.txt  Pasted--63-Or-amento-Operacional-da-Obra-c-pia-edit-vel-separa_1777947083170.txt  Pasted--AN-LISE-COMPLETA-DOS-C-LCULOS-E-PROPOSTAS-DE-MELHORIAS-SIGE-v8-0-Auditoria-T-cnica-e-Novas-S-1753270982942_1753270982943.txt  Pasted--AN-LISE-CR-TICA-DA-ARQUITETURA-DO-SISTEMA-SIGE-v9-0-Data-27-de-Outubro-de-2025-Aut-1761567883996_1761567883996.txt  Pasted--AN-LISE-DE-ACOPLAMENTO-COMPLETA-4-M-dulos-Cr-ticos-Data-27-de-Outubro-de-2025-Aut-1761572485074_1761572485074.txt  Pasted--AN-LISE-DE-ACOPLAMENTO-Contabilidade-Financeiro-e-Folha-de-Pagamento-Data-27-de-Outub-1761572474058_1761572474058.txt  Pasted--AN-LISE-T-CNICA-COMPLETA-DO-SISTEMA-SIGE-v9-0-Data-27-de-Outubro-de-2025-Autor--1761565983441_1761565983442.txt  Pasted--An-lise-Comparativa-Qual-a-Melhor-Biblioteca-de-Reconh_1769091090208.txt  (+544 more)
static/: sw.js  (+2 more)
(+1163 files in other folders)
