[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "reportlab>=4.4.2",
    "openpyxl>=3.1.5",
    "fpdf2>=2.8.3",
    "flask-dance>=7.1.0",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "requests>=2.32.4",
    "flask-migrate>=4.0.7",
    "qrcode>=8.2",
    "pillow>=11.3.0",
    "lxml>=6.0.0",
    "opencv-python>=4.11.0.86",
    "pytest>=8.4.1",
    "cryptography>=45.0.6",
    "beautifulsoup4>=4.13.5",
    "flask-cors>=6.0.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "python-dateutil>=2.9.0.post0",
    "deepface>=0.0.97",
    "tf-keras>=2.20.1",
    "opencv-python-headless>=4.13.0.90",
    "pytz>=2024.1",
    "flask-limiter>=4.1.1",
    "click>=8.2.1",
]
