[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "reportlab>=4.4.2",
    "openpyxl>=3.1.5",
    "fpdf2>=2.8.3",
    "flask-dance>=7.1.0",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "requests>=2.32.4",
    "flask-migrate>=4.0.7",
    "qrcode>=8.2",
    "pillow>=11.3.0",
    "lxml>=6.0.0",
    "cryptography>=45.0.6",
    "beautifulsoup4>=4.13.4",
    "flask-cors>=6.0.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "python-dateutil>=2.9.0",
    "deepface>=0.0.97",
    "tf-keras>=2.20.1",
    "opencv-python-headless>=4.13.0.90",
    "pytz>=2024.1",
    "flask-limiter>=4.1.1",
    "click>=8.2.1",
    "thefuzz>=0.22.1",
    "python-levenshtein>=0.27.3",
    "markdown>=3.10",
    "jsonschema>=4.22",
    "defusedxml>=0.7.1",
]

# Fase 0.5 / 2.1 — dependências de DESENVOLVIMENTO fora do runtime.
# `pytest`, `pytest-html`, `ruff` e `playwright` estavam em `dependencies` e
# viajavam para a imagem de produção — o playwright inclusive baixa binários
# de browser. Instale com `uv sync --group dev` ou `pip install ".[dev]"`.
[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-html>=4.2.0",
    "pytest-timeout>=2.3.1",
    "playwright>=1.58.0",
    "ruff>=0.6",
    "mpxj>=16.5.0",
    "jpype1>=1.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-html>=4.2.0",
    "pytest-timeout>=2.3.1",
    "playwright>=1.58.0",
    "ruff>=0.6",
    "mpxj>=16.5.0",
    "jpype1>=1.7.1",
]

[tool.pytest.ini_options]
# Fase 0.5 / 2.2 — `--strict-markers`: marker com typo passa a ser ERRO, não
# warning silencioso. `--timeout`: sem isso um teste travado pendura o CI
# indefinidamente (não havia timeout algum).
addopts = "--strict-markers --timeout=300"
markers = [
    "smoke: testes de fumaça",
    "integration: testes de integração E2E",
    "browser: testes que requerem Playwright (browser real)",
    "java: testes que sobem a JVM/MPXJ (skip sem JDK completo)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
# Auditoria de higiene; não reformatar o mundo. Regras seguras e de detecção.
extend-exclude = [
    ".pythonlibs", "__pycache__", "archive", "backups", "attached_assets",
    "migrations.py", "uv.lock",
]

[tool.ruff.lint]
# F = pyflakes (imports/vars não usados, redefinição), E9 = erros de sintaxe,
# B = bugbear (bare except, etc.). Conservador de propósito.
select = ["F", "E9", "B"]
ignore = []
